[package]
name = "sonar"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "1.0.0"
log = "0.4.22"
rustfft = { version = "6.2.0", features = ["wasm_simd"] }
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
realfft = "3.3.0"
ndarray = "0.16.0"

# cpal = { version="0.15.3", features=["wasm-bindgen"] }
# rand = "0.8.5"
# eframe = "0.28.1"
# egui_plot = "0.28.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = true

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]
